--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lenstube",
+  "name": "lenstik",
   "description": "Decentralized video-sharing social media platform.",
   "version": "1.0.3-beta",
   "private": true,
