--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-sts": "^3.266.0",
     "@aws-sdk/lib-storage": "^3.266.0",
     "@bundlr-network/client": "^0.9.11",
+    "@emoji-mart/react": "^1.1.1",
     "@headlessui/react": "^1.7.10",
     "@hookform/resolvers": "^2.9.10",
     "@livepeer/react": "^2.1.5",
@@ -29,6 +30,7 @@
     "axios": "^1.3.2",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.6",
+    "emoji-mart": "^5.5.2",
     "ethers": "5.6.0",
     "filereader-stream": "^2.0.0",
     "graphql": "^16.6.0",
